Move content across repos, viewset and pulp tasks
Closes-Issue: #41
